--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -23,4 +23,94 @@ body {
   background-repeat: no-repeat;
 
   min-height: 100vh;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: 'Poppins', sans-serif;
+  color: #fffcf9;
+
+  background-image: var(--background);
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  min-height: 100vh;
+}
+
+header {
+  padding-top: 10rem;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header img {
+  max-height: 6.2rem;
+  max-width: 8.7rem;
+  margin-bottom: 1rem;
+}
+
+header h1 {
+  font-size: 4rem;
+  color: var(--title);
+}
+
+main section {
+  display: flex;
+  gap: 3.4rem;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+main section > img {
+  height: 24rem;
+  width: 17rem;
+  object-fit: cover;
+}
+
+main section div {
+  max-width: 42rem;
+}
+
+main section h2 {
+  color: var(--title);
+  font-size: 2rem;
+
+  margin-bottom: 2rem;
+}
+
+main section p {
+  line-height: 24px;
+}
+
+main button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.7rem;
+
+  padding: 1rem;
+  margin: 3rem auto;
+
+  font-size: 1.2rem;
+
+  border: 0;
+  background-color: var(--bg-button);
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+main button img {
+  max-width: 3.5rem;
+}
+
+footer p {
+  text-align: center;
+  line-height: 20px;
+  font-size: 1.4rem;
+
+  max-width: 38rem;
+  margin-inline: auto;
+  padding-bottom: 10rem;
 }
