--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
   background-repeat: no-repeat;
 
   min-height: 100vh;
+  padding-inline: 2rem;
 }
 
 header {
@@ -54,6 +55,7 @@ header img {
 header h1 {
   font-size: 4rem;
   color: var(--title);
+  text-align: center;
 }
 
 main section {
@@ -118,4 +120,12 @@ footer p {
   max-width: 38rem;
   margin-inline: auto;
   padding-bottom: 10rem;
+}
+
+@media(max-width: 767px) {
+  main section {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  } 
 }
