--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,12 @@ main button {
   background-color: var(--bg-button);
   cursor: pointer;
   border-radius: 4px;
+
+  transition: filter 0.3s;
+}
+
+main button:hover {
+  filter: brightness(0.9);
 }
 
 main button img {
